# Folder_online

./: .gitignore  learn - 快捷方式.lnk  repo_token.txt  sh.exe.stackdump
13/: x86_vs.exe.idb
13-1/: x86_vs.exe.idb
13/13-1/: 13_1.cpp  data.txt  x86_vs.exe.idb  数据结构图c++异常.drawio  数据结构图c++异常.vsdx
13/13-10/: x64_vs.exe.id0  x64_vs.exe.id1  x64_vs.exe.id2  x64_vs.exe.nam  x64_vs.exe.til  x64_vs.i64  x64_vs.id0  x64_vs.id1  x64_vs.id2  x64_vs.nam  x64_vs.til  x64异常.drawio  新建 PPT 演示文稿.ppt
13/13-6/: x86_vs.exe.i64  x86_vs.exe.id0  x86_vs.exe.id1  x86_vs.exe.id2  x86_vs.exe.idb  x86_vs.exe.nam  x86_vs.exe.til
13/13-9/: Exception.h  TypeDescriptor_name.cpp  x86_vs.exe.idb  x86_vs_1.exe.idb
14/: upPEiD.exe.id0  upPEiD.exe.id1  upPEiD.exe.id2  upPEiD.exe.nam  分析.txt
14/开发环境伪造/: upPEiD.id0  upPEiD.id1  upPEiD.nam  upPEiD.til
15/: ollydbg断点信息.txt  解析insertname.txt
15/odbg110/: Excepction.bak  Excepction.udd  Excepction_1.udd  ollydbg.ini  upPEiD.bak  upPEiD.udd
15/ollydbgReplace/: ollydbgReplace.sln
16/: .gitignore  Compressor.txt  Consys21  Consys21.idb  SB360.exe.idb  SB360.idb  新建文本文档.txt
16/CreateMultiDirectory/: CreateMultiDirectory.cpp
16/CreateMutex/: CreateMutex.cpp
16/RemoteControlServer/: CMakeLists.txt  RemoteControlServer.sln
16/RemoteControlServer/RemoteControlServer/: AudioSpyExtractor.cpp  AudioSpyExtractor.h  CMakeLists.txt  DDosOpenExtractor.cpp  DDosOpenExtractor.h  DataContainer.cpp  DataContainer.h  DataExtractor.cpp  DataExtractor.h  DiskInfoExtractor.cpp  DiskInfoExtractor.h  RemoteControlServer.cpp  RemoteControlServer.vcxproj  RemoteControlServer.vcxproj.filters  rc4crpt.cpp  rc4crpt.h  utils.h
16/RemoteControlServer/RemoteControlServer/Debug/: RemoteControlServer.exe.recipe  remotecontrolserver.obj.enc  vc142.idb  vc143.idb
16/RemoteControlServer/RemoteControlServer/Debug/RemoteCo.d5d7e2c6.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RemoteControlServer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
16/RemoteControlServer/RemoteControlServer/x64/Debug/: RemoteControlServer.exe.recipe  RemoteControlServer.ilk  vc142.idb  vc143.idb
16/RemoteControlServer/RemoteControlServer/x64/Debug/RemoteCo.d5d7e2c6.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RemoteControlServer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
16/__try异常/: ConsoleApplication4.exe.idb  vcruntime140.dll.idb  window_exception.cpp  异常结构图.drawio
16/getProcessID/: getProcessID.cpp
16/origin/: SB360.idb
16/r4c/: r4c.cpp
16/setRegValue/: setRegValue.cpp
16/teacher/: SB360.idb
16/大灰狼病毒文件(请不要在真机运行)/: Consys21  SB360  SB360.idb
16/进程提权/: 进程提权.cpp
18/: ToUpper.exe.idb  toUpperCase.asm
Netflix-4K-Script/: cookies.txt  netflix.py  requirements.txt
anyStream/: anySteam.md
cmake/test/: CMakeLists.txt  main.cpp
cmake/uiFix/: AboutWidget.cpp  CMakeLists.txt  MyTabWidget.cpp  MyTabWidget.h  TaskTable.cpp  TaskTable.h  main.cpp  uiFit.cpp  uiFit.h  uiFit.qrc  uiFit.ui
doc/blog/: 内嵌python,有手就行.md
doc/netflix_downloader_technical_documentation/: 发明附图.drawio
electron/firstProject/: index.html  index.js  package.json
learn/C++反汇编与逆向分析技术揭秘2_配书资源随书文件/13/13-6/: 13_6_reverse.cpp  CMakeLists.txt  x86_vs.exe.idb
learn/Explore the c++ object model in depth/6.2/: CMakeLists.txt  main.cpp
learn/std_learn/list/: CMakeLists.txt  list.cpp
learn/std_learn/map/: CMakeLists.txt  map.cpp  map.exe.i64  struct.txt
learn/杂/: 参考资料.txt
netflix/: noteburner.md
netflix-script/: .gitignore  cookies.txt  encoder.py  input.Z  license.json  manifest.json  manifest_hpl.json  manifest_sd.json  netflix.py
netflix-script/cookies/: msl.json
noteBurner/: Folder_online - 快捷方式.lnk  decrypt.py  download.json  download2.json  licecse.json  main_decrypt.js  struct.txt  websockData.txt  wv_shell.exe.idb  参考资料.txt
noteBurner/ConsoleApplication2/: ConsoleApplication2.sln
noteBurner/aiA/: binaryai_12676993f64780e366e30e6940a5ad45a82a870059528c690f78fb9f94d70f14.json
noteBurner/electronTest/: convert.js  index.html  main.js  netflixHook.js  package-lock.json  package.json  parse.js  preload.js  test.js
noteBurner/frida_debug/: hook.js  hook.py  server.py  test.py
noteBurner/meidia_convert/: .gitignore  browsercookie.py  data  getLicense.py  getLicense.spec  gloVar.py  main.py  middleServer.py  middleServer.spec  netFlixDecryptor.py  netFlixMessageProcessor.py  netFlixParser.py  netflixDownloader.py  netflixMerger.py  requirements.txt  server.py  track_info  utils.py  www.netflix.com_cookies.txt
noteBurner/shell_execute/: shell_execute.sln
noteBurner/sig/: json.exc  json.sig  jsoncpp.exc  jsoncpp.pat  jsoncpp.sig
noteBurner/sig_files/: vfchm.dmp  vfchm.rpt
qt/: connect分析.drawio  qt信号槽分析.drawio  sender函数分析.drawio  work1.drawio
qt/3_2_globalDefine/: 3_2_globalDefine.sln
qt/BDownloader/: BDownloader.sln
qt/QtConsoleApplication1/: QtConsoleApplication1.sln  QtConsoleApplication1.vcxproj  QtConsoleApplication1.vcxproj.filters  m.h  main.cpp
qt/QtWidgetsApplication1/: QtWidgetsApplication1.sln
qt/Sample_3_1/: Sample_3_1.sln
qt/Sample_4_5/: CMakeLists.txt
qt/Sample_4_5/Sample_4_5/: CMakeLists.txt  Sample_4_5.cpp  Sample_4_5.h  Sample_4_5.qrc  Sample_4_5.ui  main.cpp
qt/Sample_4_6/: CMakeLists.txt  res.qrc  widget.cpp  widget.h  widget.ui
qt/itubego/: CMakeLists.txt
qt/itubego/src/: CMakeLists.txt  SingleApplication.cpp  SingleApplication.h  SingleApplicationPrivate.cpp  SingleApplicationPrivate.h  config.cpp  config.h  main.cpp  res.qrc
qt/reverse_Sample_4_5/: CMakeLists.txt
qt/reverse_Sample_4_5/src/: CMakeLists.txt  Sample_4_5.cpp  Sample_4_5.h  main.cpp  uiSample_4_5.h
qt/sampl_2_1/: sampl_2_1.sln
qt/sample2_3/: sample2_3.sln
qt/sample_2_4/: sample_2_4.sln
qt/sample_4_1/: sample_4_1.sln
qt/sample_4_2/: sample_4_2.sln
qt/sample_4_3/: sample_4_3.sln
qt/sample_4_4/: sample_4_4.sln
qt/test/: test.sln  test.ui  test.vcxproj  test.vcxproj.filters  tsignal.cpp  tsignal.h
widevine/: netfilx通信协议分析.md  widevine分析文档.md  分析过程.md
work/: 新建文本文档.py
(+1982 files in other folders)
