find_package(Qt5 COMPONENTS Widgets Gui REQUIRED)

set(HEADERS 
    Sample_4_5.h
)

set(SOURCES 
    main.cpp
    Sample_4_5.cpp
)

set(RESOURCES 
    Sample_4_5.qrc
)

set(UI
	Sample_4_5.ui
)



add_executable(${PROJECT_NAME}  ${HEADERS} ${SOURCES} ${RESOURCES} ${UI})


target_link_libraries(${PROJECT_NAME} Qt5::Widgets Qt5::Gui)

target_link_directories(${PROJECT_NAME} PUBLIC "hello")



# IF(WIN32)
#   IF(MSVC)
#     SET_TARGET_PROPERTIES(sample_4_5 PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:WINDOWS")
#     SET_TARGET_PROPERTIES(sample_4_5 PROPERTIES LINK_FLAGS_RELWITHDEBINFO "/SUBSYSTEM:WINDOWS")
#     SET_TARGET_PROPERTIES(sample_4_5 PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS")
#     SET_TARGET_PROPERTIES(sample_4_5 PROPERTIES LINK_FLAGS_MINSIZEREL "/SUBSYSTEM:WINDOWS")
#   ENDIF()
# ENDIF()